--- a/firebase-auth-flutterfire-ui/complete/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/complete/pubspec.yaml
@@ -4,16 +4,16 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
-  cloud_firestore: ^4.9.1
-  firebase_auth: ^4.9.0
-  firebase_core: ^2.15.1
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
+  firebase_ui_auth: ^1.9.0
+  firebase_ui_oauth_google: ^1.2.12
   flutter:
     sdk: flutter
-  flutterfire_ui: ^0.4.3+20
-  google_sign_in: ^5.4.4
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
