Fix up `dartpad_codelabs`

--- a/dartpad_codelabs/analysis_options.yaml
+++ b/dartpad_codelabs/analysis_options.yaml
@@ -6,6 +6,7 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     avoid_print: false
+    prefer_const_constructors: false
     use_build_context_synchronously: false
     use_key_in_widget_constructors: false
     use_super_parameters: true
