--- a/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_07/yt_cors_proxy/pubspec.yaml
@@ -3,7 +3,7 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: ^3.1.1
+  sdk: ^3.1.5
 
 dependencies:
   http: ^1.1.0
@@ -11,4 +11,4 @@ dependencies:
   shelf_cors_headers: ^0.1.5
 
 dev_dependencies:
-  lints: ">=2.0.0 <4.0.0"
+  lints: ^3.0.0
