--- a/testing_codelab/codelab_rebuild.yaml
+++ b/testing_codelab/codelab_rebuild.yaml
@@ -6,6 +6,9 @@ steps:
         rmdir: step_03
       - name: Create project
         flutter: create --empty testing_app
+      - name: Upgrade dependencies
+        path: testing_app
+        flutter: pub upgrade --major-versions
       - name: Configure analysis_options.yaml
         path: testing_app/analysis_options.yaml
         replace-contents: |
@@ -130,7 +133,7 @@ steps:
                 child: MaterialApp.router(
                   title: 'Testing Sample',
                   theme: ThemeData(
-                    primarySwatch: Colors.blue,
+                    colorScheme: ColorScheme.fromSeed(seedColor: Colors.deepPurple),
                     useMaterial3: true,
                   ),
                   routerConfig: _router,
