--- a/adaptive_app/step_04/pubspec.yaml
+++ b/adaptive_app/step_04/pubspec.yaml
@@ -1,5 +1,5 @@
 name: adaptive_app
-description: A new Flutter project.
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,9 +38,9 @@ dependencies:
   googleapis: ^11.4.0
   http: ^1.1.0
   provider: ^6.0.5
-  url_launcher: ^6.1.14
+  url_launcher: ^6.2.1
   flex_color_scheme: ^7.3.1
-  go_router: ^12.0.0
+  go_router: ^12.0.1
 
 dev_dependencies:
   flutter_test:
