--- a/animated-responsive-layout/step_04/pubspec.yaml
+++ b/animated-responsive-layout/step_04/pubspec.yaml
@@ -1,10 +1,10 @@
 name: animated_responsive_layout
-description: A new Flutter project.
+description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
 
 dependencies:
   flutter:
