--- a/ffigen_codelab/step_07/pubspec.yaml
+++ b/ffigen_codelab/step_07/pubspec.yaml
@@ -1,10 +1,10 @@
 name: ffigen_app
-description: A new Flutter FFI plugin project.
+description: "A new Flutter FFI plugin project."
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -18,7 +18,7 @@ dev_dependencies:
   ffigen: ^9.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
