--- a/firebase-auth-flutterfire-ui/complete/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/complete/pubspec.yaml
@@ -1,16 +1,16 @@
 name: complete
-description: A new Flutter project.
+description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
 
 dependencies:
-  firebase_auth: ^4.10.1
-  firebase_core: ^2.17.0
-  firebase_ui_auth: ^1.9.0
-  firebase_ui_oauth_google: ^1.2.12
+  firebase_auth: ^4.12.1
+  firebase_core: ^2.21.0
+  firebase_ui_auth: ^1.9.1
+  firebase_ui_oauth_google: ^1.2.13
   flutter:
     sdk: flutter
   google_sign_in: ^6.1.5
@@ -18,7 +18,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
