--- a/boring_to_beautiful/step_01/pubspec.yaml
+++ b/boring_to_beautiful/step_01/pubspec.yaml
@@ -20,14 +20,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   freezed_annotation: ^2.4.1
-  go_router: ^12.0.1
-  material_color_utilities: ^0.5.0
+  go_router: ^12.1.0
+  material_color_utilities: any
   universal_platform: ^1.0.0+1
   url_launcher: ^6.2.1
 
 dev_dependencies:
   build_runner: ^2.4.6
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.5
