--- a/firebase-emulator-suite/codelab_rebuild.yaml
+++ b/firebase-emulator-suite/codelab_rebuild.yaml
@@ -7,6 +7,9 @@ steps:
         rmdir: complete
       - name: Create project
         flutter: create complete --platforms android,ios,macos,web
+      - name: Update deps
+        path: complete
+        flutter: pub upgrade --major-versions
       - name: Configure analysis_options.yaml
         path: complete/analysis_options.yaml
         replace-contents: |
