--- a/github-client/step_07/pubspec.yaml
+++ b/github-client/step_07/pubspec.yaml
@@ -1,5 +1,5 @@
 name: github_client
-description: A new Flutter project.
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,8 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   oauth2: ^2.0.2
-  url_launcher: ^6.1.14
-  github: ^9.17.0
+  url_launcher: ^6.2.1
+  github: ^9.19.0
   window_to_front:
     path: ../window_to_front
   fluttericon: ^2.0.0
@@ -52,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
