--- a/testing_codelab/codelab_rebuild.yaml
+++ b/testing_codelab/codelab_rebuild.yaml
@@ -6,6 +6,9 @@ steps:
         rmdir: step_03
       - name: Create project
         flutter: create --empty testing_app
+      - name: Upgrade dependencies
+        path: testing_app
+        flutter: pub upgrade --major-versions
       - name: Configure analysis_options.yaml
         path: testing_app/analysis_options.yaml
         replace-contents: |
@@ -56,8 +59,8 @@ steps:
           +# found in the LICENSE file.
           +
            name: testing_app
-          -description: A new Flutter project.
-          +description: App behind Flutter testing codelab.
+          -description: "A new Flutter project."
+          +description: "App behind Flutter testing codelab."
            publish_to: 'none'
            version: 0.1.0
       - name: Patch lib/main.dart
