--- a/testing_codelab/step_05/pubspec.yaml
+++ b/testing_codelab/step_05/pubspec.yaml
@@ -3,28 +3,28 @@
 # found in the LICENSE file.
 
 name: testing_app
-description: App behind Flutter testing codelab.
+description: "App behind Flutter testing codelab."
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.2.0-210.4.beta <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^12.0.0
+  go_router: ^12.1.0
   provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
   flutter_driver:
     sdk: flutter
   integration_test:
     sdk: flutter
-  test: ^1.24.3
+  test: ^1.24.9
 
 flutter:
   uses-material-design: true
